--- a/ProjectDatabases/appsettings.json
+++ b/ProjectDatabases/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WhatsUpDatabase": "Data Source=projectdatabases1.database.windows.net; Initial Catalog=MVCWhatsUp1; User ID=testadmin; Password=Welkom123;TrustServerCertificate=True;"
+    "ProjectDatabase": "Data Source=projectdatabases1.database.windows.net; Initial Catalog=test1database; User ID=testadmin; Password=Welkom123;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
